账号增删改查【未调试】

--- a/mhxyHelper/makefile
+++ b/mhxyHelper/makefile
@@ -1,20 +1,34 @@
-
+.PHONY: copy_db
+# copy_db
+copy_db:
+	cp mhxyhelper.db ./bin
+	cp mhxyhelper.db-shm ./bin
+	cp mhxyhelper.db-wal ./bin
 
 .PHONY: build
 # build
 build:
 	CGO_ENABLED=0 GOOS=darwin GOARCH=amd64
-	mkdir -p bin/ && go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_helper ./gin_cmd/main.go
+	mkdir -p bin/
+	go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_helper ./gin_cmd/main.go
+	go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_cmd_helper ./cmd/main.go
+	cp mhxyhelper.db ./bin
+	cp mhxyhelper.db-shm ./bin
+	cp mhxyhelper.db-wal ./bin
 
 .PHONY: build_linux
 # build_linux
 build_linux:
-	CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ./bin/mhxy_helper_linux ./gin_cmd/main.go
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64
+	go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_helper_linux ./gin_cmd/main.go
+	go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_cmd_helper_linux ./cmd/main.go
 
 .PHONY: build_win
 # build_win
 build_win:
-	CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o ./bin/mhxy_helper.exe ./gin_cmd/main.go
+	CGO_ENABLED=0 GOOS=windows GOARCH=amd64
+	go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_helper.exe ./gin_cmd/main.go
+	go build -ldflags "-X main.Version=v0.1" -o ./bin/mhxy_cmd_helper.exe ./cmd/main.go
 
 .PHONY: docker_build
 # docker_build
